Bug 277365 - [text-box-edge] Fix imported/w3c/web-platform-tests/css/css-inline/text-box-trim/text-box-trim-dynamic-002.html
Summary: [text-box-edge] Fix imported/w3c/web-platform-tests/css/css-inline/text-box-t...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: zalan
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-07-30 11:54 PDT by zalan
Modified: 2024-07-30 16:59 PDT (History)
10 users (show)

See Also:


Attachments
Patch (2.23 KB, patch)
2024-07-30 11:55 PDT, zalan
no flags Details | Formatted Diff | Diff
[fast-cq]Patch (2.23 KB, patch)
2024-07-30 14:20 PDT, zalan
ews-feeder: commit-queue-
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description zalan 2024-07-30 11:54:35 PDT
ssia
Comment 1 zalan 2024-07-30 11:55:23 PDT
Created attachment 472020 [details]
Patch
Comment 2 zalan 2024-07-30 14:20:53 PDT
Created attachment 472021 [details]
[fast-cq]Patch
Comment 3 EWS 2024-07-30 16:45:51 PDT
Committed 281617@main (727fe0ffd683): <https://commits.webkit.org/281617@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 472021 [details].
Comment 4 Radar WebKit Bug Importer 2024-07-30 16:46:16 PDT
<rdar://problem/132855877>