[text-box-edge] Fix imported/w3c/web-platform-tests/css/css-inline/text-box-trim/text-box-trim-dynamic-002.html https://bugs.webkit.org/show_bug.cgi?id=277365

Reviewed by Simon Fraser.

Property value change requires layout update.

* LayoutTests/TestExpectations:
* Source/WebCore/rendering/style/RenderStyle.cpp:
(WebCore::rareInheritedDataChangeRequiresLayout):

Canonical link: https://commits.webkit.org/281617@main